# piquasso

./: .codecov.yml  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .mypy.ini  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Insertion_sort.py  LICENSE.txt  README.md  build.bat  build.py  jax_permanent.py  matrix.py  permanent2.py  plot.py  pq_results.json  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.py  sf_results.json  single_mode_single_layer_gate_synthesis.py  tox.ini
benchmark/: sampling_marginal_benchmark.py
benchmarks/: application_dense_subgraph_search_with_10_nodes_benchmark.py  application_dense_subgraph_search_with_15_nodes_benchmark.py  application_dense_subgraph_search_with_20_nodes_benchmark.py  application_dense_subgraph_search_with_25_nodes_benchmark.py  application_dense_subgraph_search_with_5_nodes_benchmark.py  application_feature_vector_calculation_event_sampling_benchmark.py  application_feature_vector_calculation_exact_benchmark.py  application_feature_vector_calculation_monte_carlo_benchmark.py  application_feature_vector_calculation_orbit_sampling_benchmark.py  application_feature_vector_calculation_with_10_nodes_through_sampling_benchmark.py  application_feature_vector_calculation_with_15_nodes_through_sampling_benchmark.py  application_feature_vector_calculation_with_20_nodes_through_sampling_benchmark.py  application_feature_vector_calculation_with_25_nodes_through_sampling_benchmark.py  application_feature_vector_calculation_with_5_nodes_through_sampling_benchmark.py  application_max_clique_search_with_10_nodes_benchmark.py  application_max_clique_search_with_15_nodes_benchmark.py  application_max_clique_search_with_20_nodes_benchmark.py  application_max_clique_search_with_25_nodes_benchmark.py  application_max_clique_search_with_5_nodes_benchmark.py  conftest.py  gaussian_boson_sampling_benchmark.py  gaussian_homodyne_benchmark.py  gaussian_preparation_benchmark.py  gaussian_threshold_detection_benchmark.py  gaussian_treshold_detection_benchmark.py  homodyne.py  jax_cvnn_benchmark.py  permanent_jax_ffi_cuda.py  purefock_beamsplitter_benchmark.py  purefock_beamsplitter_increasing_cutoff_benchmark.py  purefock_beamsplitter_increasing_modes_benchmark.py  purefock_boson_sampling_benchmark.py  purefock_clements_interferometer_comparison_benchmark.py  purefock_general_benchmark.py  purefock_homodyne_benchmark.py  purefock_interferometer_benchmark.py  purefock_interferometer_increasing_modes_benchmark.py  purefock_squeezing_increasing_cutoff_benchmark.py  purefock_squeezing_increasing_modes_benchmark.py  tensorflow_cv_neural_network_layer_benchmark.py  (+7 more)
docs/: Makefile  bibliography.bib  conf.py  index.rst  installation.rst  operations.rst  readme.rst
piquasso/: __init__.py  _math.py  _mixins.py  _utils.py  backend.py  conftest.py  context.py  cvqnn.py  dual_rail_encoding.py  functions.py  gates.py  lxeb.py  mode.py  operations.py  operator.py  plugin.py  program.py  registry.py  state.py  utils.py
piquasso/_math/: CMakeLists.txt  __init__.py  _random.py  combinatorics.py  decompositions.py  dense_subgraph.py  fock.py  functions.py  gate_matrices.py  gradients.py  hafnian.py  hermite.py  indices.py  linalg.py  lists.py  max_clique.py  permanent.cpp  permanent.py  pfaffian.cpp  pfaffian.py  points.py  polynomial.py  similarity.py  symplectic.py  takagi.py  torontonian.cpp  torontonian.py  transformations.py  validations.py
piquasso/_math/hafnian/: __init__.py  hessenberg.py  labudde.py  loop_corrections.py  loop_hafnian.py  plain_hafnian.py  powtrace.py  utils.py
piquasso/_math/jax/: hafnian.py  hermite.py  permanent.py  utils.py
piquasso/_math/perm_boost/: CMakeLists.txt  __init__.py  permanent.py
piquasso/jax_extensions/: CMakeLists.txt  __init__.py  permanent.py
scripts/: boson_sampling_benchmark.py  boson_sampling_dask_benchmark.py  boson_sampling_hist.py  compile_different_shapes.py  compile_displacement_gate.py  compile_interferometer.py  conftest.py  cramer.py  cvnn_1_mode_gradient_comparison.py  cvnn_increasing_modes_benchmark.py  cvnn_mean_position_benchmark.py  cvnn_state_learning_benchmark.py  cvnn_tf_function_benchmark.py  cvnn_tf_mean_position_benchmark.py  cvqnn_1_mode_gradient_comparison.py  cvqnn_mean_position_benchmark.py  cvqnn_state_learning_benchmark.py  cvqnn_tensorflow_comparison_benchmark.py  cvqnn_tensorflow_comparison_script.py  fermion_sampling.py  fermionic_fock_jax_benchmark.py  gaussian_boson_sampling_benchmark.py  gaussian_boson_sampling_dask_benchmark.py  gbs_cramer.py  gbs_graph_histogram.py  gbs_graph_histogram_script.py  gbs_histogram.py  gbs_histogram_script.py  gbs_hypothesis_test_for_one_mode_script.py  gbs_hypothesis_test_script.py  gbs_nondisplaced_histogram_script.py  hafnian_benchmark.py  jax_cvnn_benchmark.py  klm.py  loop_hafnian_batch_benchmark.py  loop_hafnian_benchmark.py  loop_torontonian_benchmark.py  optimize_cz_gate.py  optimize_cz_gate_jax.py  optimize_cz_gate_with_imperfect_post_selection.py  (+38 more)
src/: CMakeLists.txt  loop_torontonian.cpp  loop_torontonian.hpp  matrix.hpp  n_aryGrayCodeCounter.hpp  numpy_utils.hpp  permanent.cpp  permanent.hpp  permanent_laplace.cpp  permanent_laplace.hpp  pfaffian.cpp  pfaffian.hpp  torontonian.cpp  torontonian.hpp  torontonian_common.cpp  torontonian_common.hpp  utils.hpp
src/jax_perm/: jax_perm_core.cpp
src/jax_perm/cuda/: CMakeLists.txt  gpu_ops.cc
src/perm_boost/: gpu_ops.cc  kernels.cc.cu  kernels.h  matrix.hpp  perm_boost_compat.hpp  perm_boost_core.cpp  permanent.hpp  utils.hpp
src/perm_boost/cuda/: CMakeLists.txt  gpu_ops.cc  kernels.cc.cu  kernels.h
tests/: conftest.py  test_clements.py  test_copyright.py  test_cvqnn.py  test_dual_rail_encode.py  test_dual_rail_encoding.py  test_extras.py  test_fock.py  test_functions.py  test_gaussian.py  test_get_marginal_fock_probabilities.py  test_instructions.py  test_lxeb.py  test_operations.py  test_piquasso.py  test_plugin.py  test_pncpurefock.py  test_program.py  test_purefock.py  test_sampling.py  test_utils.py
tutorials/: maxclique.py  (+2 more)
(+701 files in other folders)
