[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "piquasso"
version = "5.0.1"
description = "A simulator for photonic quantum computations."
readme = "README.md"
license = { file = "LICENSE.txt" }
keywords = ["piquasso", "quantum", "photonic"]
maintainers = [
  { name = "Budapest Quantum Computing Group", email = "kolarovszki@inf.elte.hu" },
]
requires-python = ">=3.8,<3.13"
dependencies = [
  "numpy>=1.19.5",
  "scipy>=1.5.4",
  "numba>=0.57.1",
  "quantum-blackbird==0.5.0",
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
]


[project.urls]
Homepage = "https://piquasso.com"
Documentation = "https://piquasso.readthedocs.io"
Repository = "https://github.com/Budapest-Quantum-Computing-Group/piquasso"

[project.optional-dependencies]
tensorflow = ["tensorflow"]
jax = ["jax[cpu]"]
dev = [
  "pytest>=8.0.1,<8.4.0",
  "coverage~=7.6.1",
  "mypy==1.8.0",
  "flake8~=7.1.1",
  "nbqa>=1.3.1,<1.10.0",
  "nbmake~=1.5.4",
  "black>=24.2,<24.11",
]
docs = [
  "sphinx>=7.1.2,<8.2.0",
  "nbsphinx~=0.9.5",
  "furo~=2024.8.6",
  "ipython>=8.12.3,<8.31.0",
  "sphinx-design>=0.5,<0.7",
]
benchmark = [
  "matplotlib>=3.9.2,<3.11.0",
  "pytest-profiling>=1.7,<1.9",
  "pytest-benchmark>=4.0,<5.2",
  "perceval-quandela>=0.11.2,<0.13.0",
]

[tool.scikit-build]
cmake.verbose = true
logging.level = "INFO"
