[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "piquasso"
version = "6.1.0"
description = "A Photonic Quantum Computer Simulator written in Python and C++."
readme = "README.md"
license = { file = "LICENSE.txt" }
keywords = ["quantum computing", "photonic quantum computing", "boson sampling"]
maintainers = [
  { name = "Budapest Quantum Computing Group", email = "kolarovszki@inf.elte.hu" },
]
requires-python = ">=3.8,<3.14"
dependencies = [
  "numpy>=1.19.5",
  "scipy>=1.5.4",
  "numba>=0.57.1",
  "quantum-blackbird==0.5.0",
]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",

  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",

  "Topic :: Scientific/Engineering :: Quantum Computing",
  "Development Status :: 5 - Production/Stable",
]

[project.urls]
Homepage = "https://piquasso.com"
Documentation = "https://piquasso.readthedocs.io"
Repository = "https://github.com/Budapest-Quantum-Computing-Group/piquasso"
Issues = "https://github.com/Budapest-Quantum-Computing-Group/piquasso/issues"
Changelog = "https://github.com/Budapest-Quantum-Computing-Group/piquasso/blob/main/CHANGELOG.md"

[project.optional-dependencies]
tensorflow = ["tensorflow"]
jax = ["jax[cpu]"]
matplotlib = ["matplotlib"]
dev = [
  "pytest>=8.0.1,<8.4.0",
  "coverage~=7.6.1",
  "mypy==1.8.0",
  "flake8~=7.1.1",
  "nbqa>=1.3.1,<1.10.0",
  "nbmake~=1.5.4",
  "black>=24.2,<25.2",
  "pytest-lazy-fixtures==1.1.4",
]
docs = [
  "sphinx>=7.1.2,<8.3.0",
  "nbsphinx~=0.9.5",
  "furo~=2024.8.6",
  "ipython>=8.12.3,<9.1.0",
  "sphinx-copybutton~=0.5.2",
  "sphinx-design>=0.5,<0.7",
  "sphinxcontrib-bibtex==2.6.3",
]
benchmark = [
  "matplotlib>=3.9.2,<3.11.0",
  "pytest-profiling>=1.7,<1.9",
  "pytest-benchmark>=4.0,<5.2",
  "perceval-quandela>=0.11.2,<0.14.0",
]

[tool.scikit-build]
cmake.verbose = true
logging.level = "INFO"
